polished .gitignore. Reformatted the whole repo with black. Added HF compatible model impl

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-/data/brats2017_seg/BraTS2017_Training_Data/*
-/data/brats2017_seg/brats2017_raw_data/train/*
-
-/data/brats2021_seg/BraTS2021_Training_Data/*
-/data/brats2021_seg/brats2021_raw_data/train
-
-
-/visualization/*
-
-
+**/.vscode
 **/wandb
 **/__pycache__
 **.pth
